@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<halevt:Configuration version="0.1" xmlns:halevt="http://www.environnement.ens.fr/perso/dumas/halevt.html">
+
+<!-- 
+  Examples of notifications with popper, from Marcin Gryszkalis.
+  Popper is at http://phospher.com/index.php/Popper
+-->
+
+<!-- a notification when printer or scanner is inserted or removed -->
+
+<halevt:Device match="hal.info.category = printer | hal.info.category = scanner ">
+  <halevt:Insertion exec="/bin/popper -n -5 '$hal.info.category$ detected' 'Connected $hal.info.vendor$ $hal.info.product$' '/usr/share/icons/nuvola/64x64/devices/printer.png'" />
+</halevt:Device>
+
+<halevt:Device match="hal.info.category = printer | hal.info.category = scanner">
+  <halevt:Removal exec="/bin/popper -n -5 '$hal.info.category$ removed' 'Removed $hal.info.vendor$ $hal.info.product$' '/usr/share/icons/nuvola/64x64/devices/printer.png'" />
+</halevt:Device>
+
+<!-- notification when an inserted disk is blank -->
+
+<halevt:Device match="hal.volume.is_disc = true &amp; hal.volume.disc.is_blank = true">
+  <halevt:Insertion exec="/bin/popper -n -5 'Empty disc' 'This disc is empty ($hal.volume.disc.type$)' '/usr/share/icons/nuvola/64x64/devices/cdwriter_unmount.png'" />
+</halevt:Device>
+
